# weathr

./: Cargo.toml  Makefile  README.md
src/: main.rs
