[package]
name = "weathr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
printwrap = { path = "../printwrap" }
log = { version = "0.4", features = ["std", "serde"] }
stderrlog = "0.6.0"
minreq = {version = "2.13.0", features = ["https"]}
terminal_size = "0.4.0"
chrono = "0.4.38"